gcc/testsuite/gdc.test/compilable/imports/a15856.d
module imports.a15856;

alias int c_long;
