gcc/testsuite/gdc.test/fail_compilation/imports/test20267.d
module imports.test20267;

int[1] array;
